# molstructok

./: README.md  debug.ipynb  hello.py  pyproject.toml
src/: mol_struc_tok.py
tests/: methane.xyz  test_mol_struc_tok.py  water.xyz
