[project]
name = "molstructok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase>=3.23.0",
    "jupyter>=1.1.1",
    "numpy>=2.1.3",
    "pytest>=8.3.4",
    "rdkit>=2024.3.6",
    "torch>=2.5.1",
    "transformers>=4.46.3",
]
